# fastAPI_todo

./: main.py  pyproject.toml
