[tool.poetry]
name = "fastapi-todo"
version = "0.1.0"
description = ""
authors = ["ferrary7 <ary7sharma@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_todo"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
